some progress made, sample front page

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -285,7 +285,7 @@ body
 
 #mainmenu
 {
-	background:white url(bg_admin.gif) repeat-x left top;
+	background:white url(../images/bg_blue.gif) repeat-x left top;
 }
 
 #mainmenu ul
