--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -273,7 +273,7 @@ div.breadcrumbs span
 {
 	-moz-border-radius:7px;
 	padding: 5px;
-	background: #EFFDFF;
+	background: #f3f3f3;
 }
 .post .nav a 
 {
