--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -84,7 +84,7 @@ div#homepage-main-categories-list a.category-link:hover
 }
 div#homepage-messages-area
 {
-	height: 666px;
+	height: 3em;
 }
 div#homepage-action-categories-list a.category-link
 {
