--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -236,13 +236,24 @@ div.breadcrumbs span
 
 .post
 {
+	width: 500px;
 	margin: 0 0 20px;
+	
+}
+
+.post .masthead
+{
+	color: #333;
+	font-weight: normal;
+	margin: 1em 0;
 }
 
 .post .title
 {
 	font-size: 1.5em;
-	border-bottom: 1px solid #C9E0ED;
+	border-bottom: 1px solid #f5f5f5;
+	margin-bottom: 1em;
+	font-weight: bold;
 }
 
 .post .title a
@@ -251,17 +262,17 @@ div.breadcrumbs span
 	text-decoration: none;
 }
 
-.post .subtitle
+.post .prologue
 {
 	color: #333;
-	font-weight: bold;
+	font-weight: normal;
 	margin: 1em 0;
 }
 
 .post .author
 {
 	color: #888;
-	margin: 0 0 5px;
+	margin: 3em 0 1em 0;
 }
 
 .post .nav
@@ -269,6 +280,7 @@ div.breadcrumbs span
 	-moz-border-radius:7px;
 	padding: 5px;
 	background: #f3f3f3;
+	font-size: 85%;
 }
 .post .nav a 
 {
@@ -500,3 +512,21 @@ table { border-collapse: collapse; }
 table td { vertical-align: top; }
 
 
+/*
+ * custom by jimel
+ */
+span.index { 
+	color: #82CB40;
+}
+
+.post a {
+	text-decoration: none;
+	color: #7FD6F6;
+	font-weight: bold;
+}
+.post h2 {
+	font-size: 112%; 
+}
+.post h3 {
+	font-size: 105%;
+}
