--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -40,7 +40,7 @@ div#content
 div#footer
 {
 	background-color: #000;
-	padding: 5px 10px;
+	padding: .5em 0 1em 0;
 	color: white;
 	font-size: 85%;
 }
@@ -574,3 +574,8 @@ ul.multilevelMenu a:hover, ul.multilevelMenu li span:hover {
 	background-color: #7fd6f6;
 }
 
+
+/* footer columns ULs */
+ul.footerMenu { 
+	padding-left: 1.5em;
+}
