--- a/assets/css/author.css
+++ b/assets/css/author.css
@@ -355,8 +355,11 @@ x#xmainmenu ul li a:hover, x#xmainmenu ul li.active a
 div.flash-error, div.flash-notice, div.flash-success
 {
 	padding:.8em;
-	margin-bottom:1em;
-	border:2px solid #ddd;
+	margin: 1em 0;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	font-size: 110%;
+	font-weight: bold;
 }
 
 div.flash-error
@@ -375,9 +378,9 @@ div.flash-notice
 
 div.flash-success
 {
-	background:#E6EFC2;
-	color:#264409;
-	border-color:#C6D880;
+	background:#E1FBCC;
+	color:#26691A;
+	border-color:#6CC909;
 }
 
 div.flash-error a
