--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -605,3 +605,13 @@ body.popup h1 {
 	margin: 1em 0;
 	padding-top: 2em; /* cannot use margin, we are clearing a float. */
 }
+
+/* for the tags list page */
+#content #tags-list {
+	line-height: 2;
+}
+#content #tags-list a {
+	font-weight: bold;
+    text-decoration: none;
+    color: #555555;
+}
