--- a/assets/css/author.css
+++ b/assets/css/author.css
@@ -245,7 +245,7 @@ body
 	font-size: 10pt;
 	font-family: 'Open sans',sans-serif;
 	background: #29546B;
-	background: white url(../images/bg_admin2.jpg) center center no-repeat fixed;
+	background: white url(../images/bg_author.jpg) center center no-repeat fixed;
 }
 
 #page
@@ -253,7 +253,7 @@ body
 	margin-top: 5px;
 	margin-bottom: 5px;
 	background: white;
-	border: 1px solid #555;
+	border: 1px solid #333;
 	box-shadow: 0px 0px 50px rgba(0, 0, 0, .3);
 }
 
@@ -284,41 +284,13 @@ body
 
 #logo
 {
-	padding: 10px 20px;
-	font-size: 200%;
-}
-
-x#xmainmenu
-{
-	background:white url(../images/bg_blue.gif) repeat-x left top;
-}
-
-x#xmainmenu ul
-{
-	padding:6px 20px 5px 20px;
-	margin:0px;
-}
-
-x#xmainmenu ul li
-{
-	display: inline;
-}
-
-x#xmainmenu ul li a
-{
-	color:#ffffff;
-	background-color:transparent;
-	font-size:12px;
-	font-weight:bold;
-	text-decoration:none;
-	padding:5px 8px;
-}
-
-x#xmainmenu ul li a:hover, x#xmainmenu ul li.active a
-{
-	color: #6399cd;
-	background-color:#EFF4FA;
-	text-decoration:none;
+	padding: .5em 1em;
+	font-size: 250%;
+	font-weight: bold;
+	color: white;
+	background: #A5261A url(../images/bg_fade_black.png) bottom left repeat-x;
+	background: #3F9E3D url(../images/bg_fade_black.png) bottom left repeat-x;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
 #mainmenu { background:white url(../images/bg_blue.gif) repeat-x left top; padding: 0 1.5em; }
@@ -738,7 +710,7 @@ a.button:hover, a.search-button:hover, input[type=submit]:hover
 
 
 #content a {
-	color: #23455A;
+	color: #368433;
 	text-decoration: none;
 	font-weight: bold;
 }
