--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -51,69 +51,61 @@ div#footer a
 }
 
 
-div#homepage-explanation
-{
+
+
+/* left column, in all pages */
+
+div#left-column #moto {
 	margin: 1em 0 3em 0;
 	font-weight: lighter;
 	color: #aaa;
 }
 
-div#content-col1 a.category-link, div#content-col4 a.category-link
-{
+div#left-column h3 {
+	font-weight: normal;
+	font-size: 280%;
+	margin-top: .5em;
+	margin-bottom: .5em;
+}
+
+div#left-column .blue-buttons, div#left-column .black-buttons {
+	margin-bottom: 5em;
+}
+
+div#left-column a {
 	display: block;
 	margin: 1em 0;
-	background-color: #aaa;
 	text-decoration: none;
 	padding: .25em .5em;
 	font-size: 110%;
-	letter-spacing: 3px;
+	letter-spacing: 2px;
 }
-div#homepage-main-categories-list a.category-link
-{
+
+div#left-column .blue-buttons a {
 	background-color: #66cef5;
 	color: black;
 }
-div#homepage-main-categories-list a.category-link:hover
-{
+
+div#left-column .blue-buttons a:hover {
 	background-color: #7fd6f6;
 }
-div#homepage-messages-area
-{
-	height: 3em;
-}
-div#homepage-action-categories-list a.category-link
-{
+
+div#left-column .black-buttons a {
 	background-color: #000;
 	color: white;
-	margin-bottom: .5em;
 }
-div#homepage-action-categories-list span.category-subtitle
-{
-	display: block;
-	text-align: right;
-	margin: -.5em 0;
-}
-div#homepage-action-categories-list a.category-link:hover
-{
+
+div#left-column .black-buttons a:hover {
 	background-color: #222;
-	color: white;
 }
-div#homepage-pages-categories-list h3
-{
-	font-weight: normal;
-	font-size: 280%;
-	margin-top: 3em;
-	margin-bottom: .5em;
-}
-div#homepage-pages-categories-list a.category-link
-{
-	background-color: #66cef5;
-	color: black;
-}
-div#homepage-pages-categories-list a.category-link:hover
-{
-	background-color: #7fd6f6;
-}
+
+
+
+
+
+
+
+
 
 
 
@@ -580,6 +572,8 @@ ul.multilevelMenu a, ul.multilevelMenu li span {
 ul.multilevelMenu a:hover, ul.multilevelMenu li span:hover {
 	background-color: #7fd6f6;
 }
+
+
 
 
 /* footer columns ULs */
