--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -535,9 +535,15 @@ div.wide form .errorMessage
 /*
  * some redefinitions
  */
-
-table { border-collapse: collapse; }
-table td { vertical-align: top; }
+.post .content table {
+	border-collapse: collapse;
+	min-width: 66%;
+}
+.post .content table td {
+	padding: .25em .5em;
+	border: 1px solid #ccc;
+	vertical-align: top;
+}
 
 
 /*
