--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -156,7 +156,7 @@ ul.compact-buttons-list ul a {
 .post .title
 {
 	font-size: 1.5em;
-	border-bottom: 1px solid #f5f5f5;
+	-border-bottom: 1px solid #f5f5f5;
 	margin-bottom: 1em;
 	font-weight: bold;
 }
@@ -176,15 +176,17 @@ ul.compact-buttons-list ul a {
 	color: #888;
 	margin: 3em 0 1em 0;
 }
-.post .nav
+.post .post-info
 {
 	-moz-border-radius:7px;
-	padding: 5px;
-	background: #f3f3f3;
+	-border-top: 1px solid #ddd;
+	-background: #c7c8ca;
+	background: #ddd;
+	padding: .125em .5em;
 	font-size: 85%;
-	margin-bottom: 1.5em;
+	margin: 1em 0;
 }
-.post .nav a 
+.post .post-info a 
 {
 	text-decoration: none;
 	color: #555;
