--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -275,7 +275,7 @@ div.breadcrumbs span
 .post .title
 {
 	font-size: 1.5em;
-	border-bottom: 1px solid #f5f5f5;
+	-border-bottom: 1px solid #ddd;
 	margin-bottom: 1em;
 	font-weight: bold;
 }
@@ -288,8 +288,8 @@ div.breadcrumbs span
 
 .post .prologue
 {
-	color: #333;
-	font-weight: normal;
+	color: #09f;
+	font-weight: bold;
 	margin: 1em 0;
 }
 
@@ -299,14 +299,17 @@ div.breadcrumbs span
 	margin: 3em 0 1em 0;
 }
 
-.post .nav
+.post .post-info
 {
 	-moz-border-radius:7px;
-	padding: 5px;
-	background: #f3f3f3;
+	-border-top: 1px solid #ddd;
+	-background: #c7c8ca;
+	background: #ddd;
+	padding: .125em .5em;
 	font-size: 85%;
+	margin: 1em 0;
 }
-.post .nav a 
+.post .post-info a 
 {
 	text-decoration: none;
 	color: #555;
