comments form became collapsible

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -379,3 +379,17 @@ div.form .errorSummary ul
     text-decoration: none;
     color: #555555;
 }
+
+#content #comments #add-comment-form {
+	padding: .5em 1em;
+	margin: 1em 0;
+	background-color: #eee;
+	border: 1px solid #ddd;
+}
+
+#content a.gray {
+	text-decoration: none;
+	color: #777;
+}	
+
+
