small improvements to style sheets

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -749,4 +749,5 @@ div.static-page {
 	margin: 0 auto;
 }
 
-
+del { color: #c00; text-decoration :line-through; }
+ins { color: #0c0; text-decoration: underline; }
