finally users may register!

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -183,7 +183,7 @@ div.flash-success a
 	color:#264409;
 }
 
-div.form .rememberMe label
+div.form .rememberMe label, div.form .checkbox label
 {
 	display: inline;
 }
