--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -261,6 +261,7 @@ body
 {
 	margin: 0;
 	padding: 0;
+	background: #3E7FA0 url(../images/bg_fade_black.png) bottom left repeat-x;
 }
 
 #content
@@ -284,12 +285,20 @@ body
 
 #logo
 {
-	padding: .5em 1em;
+	padding: 10px 20px 0px 20px;
+	color: white;
 	font-size: 250%;
 	font-weight: bold;
-	color: white;
-	background: #3E7FA0 url(../images/bg_fade_black.png) bottom left repeat-x;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+}
+#sublogo
+{
+	padding: 0 20px 20px 20px;
+	color: #eee;
+	font-size: 150%;
+	font-weight: normal;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+	letter-spacing: 1px;
 }
 
 
@@ -701,17 +710,16 @@ a.button, a.search-button, input[type=submit]
 	display: inline-block;
 	text-decoration: none;
 	font-weight: bold;
-	color: #666;
-	background-color: #ddd;
-	border: 1px solid #aaa;
-	border-radius: 5px;
-	padding: 4px 10px;
+	color: white !important;
+	border: 1px solid #333;
+	border-radius: 3px;
+	padding: .3em 1em;
+	background:white url(../images/bg_blue.gif) repeat-x left top; 
 }
 a.button:hover, a.search-button:hover, input[type=submit]:hover
 {
-	color: #555;
-	background-color: #eee;
-	border: 1px solid #999;
+	background: #4686A8;
+	text-decoration: none !important;
 }
 
 
