--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -333,31 +333,32 @@ body
 	padding: 0 8px;
 }
 
-div.flash-error, div.flash-notice, div.flash-success
+.flash-error, .flash-notice, .flash-success
 {
-	padding:.8em;
-	margin: 1em 0;
+	display: block;
+	padding: 1em;
+	margin: 0 0 1.5em 0;
 	border: 1px solid #ddd;
 	border-radius: 3px;
 	font-size: 110%;
 	font-weight: bold;
 }
 
-div.flash-error
+.flash-error
 {
 	background:#FBE3E4;
 	color:#8a1f11;
 	border-color:#FBC2C4;
 }
 
-div.flash-notice
+.flash-notice
 {
 	background:#FFF6BF;
 	color:#514721;
 	border-color:#FFD324;
 }
 
-div.flash-success
+.flash-success
 {
 	background:#E1FBCC;
 	color:#26691A;
