Added social sharing buttons in each post.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -709,4 +709,13 @@ body.popup h1 {
 }
 
 
+#social-sharing {
+	clear: both;
+	float: none;
+}
+#social-sharing img {
+	max-width: 24px;
+	margin-right: .5em;
+}
+
 
