--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -395,3 +395,50 @@ div.form .errorSummary ul
 }	
 
 
+
+
+
+.search-results {
+	max-width: 540px;
+	margin-top: 2em;
+}
+.search-results .post-entry {
+	margin-bottom: 1.5em;
+}
+
+.search-results .category-entry {
+}
+
+.search-results .tag-entry {
+}
+.search-results .title {
+	color: #09f; 
+	margin: 0;
+	font-size: 110%;
+}
+.search-results .title a {
+	color: inherit;
+	text-decoration: none;
+}
+.search-results .excerpt {
+	
+}
+.search-results .info {
+	color: #555;
+	font-size: 85%;
+}
+.search-results .info a {
+	color: inherit;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+
+#social-sharing {
+	clear: both;
+	float: none;
+}
+#social-sharing img {
+	max-width: 32px;
+	margin-right: .5em;
+}
