--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -214,6 +214,13 @@ ul.compact-buttons-list ul a {
 .post .content table tr:nth-child(even) {
 	background-color: #e6e6e6;
 }
+.post .content table.plain tr {
+	background-color: transparent;
+}
+.post .content table.plain td {
+	border: 0px solid #ccc;
+}
+
 
 
 .comment
